@@ -1,13 +1,10 @@
 package org.opentripplanner.graph_builder.module.transfer;
 
 import java.time.Duration;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import org.opentripplanner.graph_builder.issue.api.DataImportIssueStore;
-import org.opentripplanner.graph_builder.module.TransferParameters;
+import org.opentripplanner.graph_builder.module.transfer.api.RegularTransferParameters;
+import org.opentripplanner.graph_builder.module.transfer.api.TransferParametersForMode;
 import org.opentripplanner.routing.algorithm.GraphRoutingTest;
 import org.opentripplanner.routing.api.request.RouteRequest;
 import org.opentripplanner.street.model.StreetMode;
@@ -36,9 +33,8 @@ class DirectTransferGeneratorTestData extends GraphRoutingTest {
   private boolean noTransfersOnStationA = false;
   private boolean graphHasStreets = false;
   private boolean includeCarFerryTrips = false;
-  private Duration maxTransferDuration = MAX_TRANSFER_DURATION;
-  private final List<RouteRequest> transferRequests = new ArrayList<>();
-  private final Map<StreetMode, TransferParameters> transferParametersForMode = new HashMap<>();
+  private RegularTransferParameters.Builder regularTransferParameters =
+    RegularTransferParameters.of().withMaxDuration(MAX_TRANSFER_DURATION);
 
   public DirectTransferGeneratorTestData withPatterns() {
     this.addPatterns = true;
@@ -65,21 +61,21 @@ class DirectTransferGeneratorTestData extends GraphRoutingTest {
     return this;
   }
 
-  public DirectTransferGeneratorTestData withMaxTransferDuration(Duration value) {
-    this.maxTransferDuration = value;
+  public DirectTransferGeneratorTestData withMaxDuration(Duration value) {
+    this.regularTransferParameters.withMaxDuration(value);
     return this;
   }
 
   public DirectTransferGeneratorTestData withTransferRequests(RouteRequest... request) {
-    this.transferRequests.addAll(Arrays.asList(request));
+    this.regularTransferParameters.withRequests(List.of(request));
     return this;
   }
 
   public DirectTransferGeneratorTestData addTransferParameters(
     StreetMode mode,
-    TransferParameters value
+    TransferParametersForMode value
   ) {
-    this.transferParametersForMode.put(mode, value);
+    this.regularTransferParameters.addParametersForMode(mode, value);
     return this;
   }
 
@@ -92,9 +88,7 @@ class DirectTransferGeneratorTestData extends GraphRoutingTest {
       model.timetableRepository(),
       model.transferRepository(),
       DataImportIssueStore.NOOP,
-      maxTransferDuration,
-      transferRequests,
-      transferParametersForMode
+      regularTransferParameters.build()
     ).buildGraph();
 
     return model.transferRepository();
